--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,14 @@
 {% block title %}Home Page{% endblock %}
 {% block content %}
 <h1> Test </h1>
+<form action="#" method ="post">
+    <p>Submit article:</p>>
+    <p><input type="text" name="nm" style="width:300px"></p>
+    <p><input type="submit" name="submit"></p>
+</form>
 {% endblock %}
+<style>
+input, text {
+    width:100px; //change this to any other value
+}
+</style>
