--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,7 @@
-{% extends "base.html" %}
-{% block title %}Home Page{% endblock %}
-{% block content %}
-<h1> Test </h1>
-<form action="#" method ="post">
-    <p>Submit article:</p>>
-    <p><input type="text" name="nm" style="width:300px"></p>
-    <p><input type="submit" name="submit"></p>
-</form>
-{% endblock %}
-<style>
-input, text {
-    width:100px; //change this to any other value
-}
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<body>
+    <h1>Ethan Jones</h1>
+<h1>Removed Text</h1>
+</body>
+</html>
